infra/cluster/monitoring/grafana-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-route
  namespace: monitoring
spec:
  parentRefs:
    - name: sqld-gateway
      namespace: app
  hostnames:
    - grafana.int.selfronny.com
  rules:
    - backendRefs:
        - name: monitoring-grafana
          port: 80
