infra/cluster/monitoring/prom-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prom-route
  namespace: monitoring
spec:
  parentRefs:
    - name: sqld-gateway
      namespace: app
  hostnames:
    - prom.int.selfronny.com
  rules:
    - backendRefs:
        - name: monitoring-kube-prometheus-prometheus
          port: 9090
